--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,13 @@
 [tox]
 minversion = 3.8.0
-envlist = py37, py38, py39, py310, py311, py312, flake8, mypy
+envlist = py37, py38, py310, py312, flake8, mypy
 isolated_build = true
 
 [gh-actions]
 python =
     3.7: py37
     3.8: py38
-    3.9: py39
     3.10: py310, mypy, flake8
-    3.11: py311
     3.12: py312
 
 [testenv]
